# PAE

./: .dockerignore  .env.demo  .env.example  .gitignore  Dockerfile  FINAL_STATUS.md  LEEME_EVALUADORES.md  LICENSE  Makefile  README.md  SETUP.md  checkout_mock.html  demostracion_interactiva.html  docker-compose.yml  pyproject.toml  reporte_ejemplo_compliance.html
.github/workflows/: test.yml
data/: masvs_to_cra.yaml
docker/weasyprint/: Dockerfile
scripts/: fixture_capture_NOTES.md  record_demo.py  seed_demo_keys.py  seed_demo_scan.py  smoke_api.sh  smoke_full.sh  smoke_llm.py  smoke_pdf.py
src/ikusa/: api.py  auth.py  billing.py  cli.py  config.py  cra.py  llm.py  mcp_server.py  mobsf.py  models.py  parser.py  pipeline.py  report.py  score.py  state.py
src/ikusa/prompts/: triage_system.txt  triage_user.txt.j2
src/ikusa/static/: index.html  style.css  terminal.html
src/ikusa/templates/: report.html.j2
tests/: test_api.py  test_auth.py  test_billing.py  test_cli.py  test_cra.py  test_llm.py  test_mcp.py  test_mobsf_client.py  test_models.py  test_parser.py  test_pipeline.py  test_report.py  test_score.py  test_state.py
tests/fixtures/: diva_llm_response.json  insecurebank_mobsf.json
